# faceinc

./: AdaFaceEmbedder.cpp  AdaFaceEmbedder.hpp  CMakeLists.txt  FacePipeline.cpp  README.md
alignment_SCRFD/: SCRFD.cpp  SCRFD.hpp
